Made code more type-safe by using Java 1.5 generics